--- a/docs-2.0-en/4.deployment-and-installation/2.compile-and-install-nebula-graph/3.deploy-nebula-graph-with-docker-compose.md
+++ b/docs-2.0-en/4.deployment-and-installation/2.compile-and-install-nebula-graph/3.deploy-nebula-graph-with-docker-compose.md
@@ -281,7 +281,7 @@ You have met the rate limit of Docker Hub. Learn more on [Understanding Docker H
 
 The command `docker-compose pull` updates both the NebulaGraph services and the NebulaGraph Console.
 
-### Why do storaged containers remain in `offline` status?
+### How to activate storaged containers when they remain in `offline` status?
 
 The activation script for storaged containers in Docker Compose may fail to run in rare cases. You can connect to NebulaGraph with [NebulaGraph Console](../../nebula-console.md) or [NebulaGraph Studio](../../nebula-studio/deploy-connect/st-ug-connect.md) and then manually run the `ADD HOSTS` command to activate them by adding the storaged containers to the cluster. An example of the command is as follows:
 
