--- a/docs-2.0-zh/4.deployment-and-installation/2.compile-and-install-nebula-graph/3.deploy-nebula-graph-with-docker-compose.md
+++ b/docs-2.0-zh/4.deployment-and-installation/2.compile-and-install-nebula-graph/3.deploy-nebula-graph-with-docker-compose.md
@@ -278,6 +278,15 @@ graphd:
 
 `docker-compose pull`会同时更新 {{nebula.name}} 服务和 NebulaGraph Console。
 
+### Storaged 容器一直处于`offline`状态
+
+在小概率的情况下，Docker Compose 中的 Storaged 激活脚本并没有在适当的时机得到执行。如果发现 Storaged 容器的健康状态一直是`offline`，可以通过 [NebulaGraph Console](../../nebula-console.md) 或者 [NebulaGraph Studio](../../nebula-studio/deploy-connect/st-ug-connect.md) 连接 NebulaGraph，并手动执行`ADD HOSTS`命令对其进行激活。激活命令示例如下：
+
+```ngql
+nebula> ADD HOSTS "storaged0":9779,"storaged1":9779,"storaged2":9779
+```
+
+
 <!--
 ## 相关视频
 
