--- a/docs-2.0/k8s-operator/4.cluster-administration/4.6.backup-and-restore.md
+++ b/docs-2.0/k8s-operator/4.cluster-administration/4.6.backup-and-restore.md
@@ -33,7 +33,7 @@ To backup and restore data using NebulaGraph Operator, the following conditions 
   ...
   ```
 
-- Only storage services that use the S3 protocol (such as AWS S3, Minio, etc.) and Google Cloud Storage can be used to back up and restore data.
+- Only storage services that use the S3 protocol (such as AWS S3, Minio, etc.) <!--and Google Cloud Storage -->can be used to back up and restore data.
 - Sufficient computing resources are available in the cluster to restore data.
 
 ## Backup 
@@ -95,7 +95,7 @@ spec:
             --s3.endpoint https://s3.REGION.amazonaws.com'  # The endpoint of the S3 protocol-compatible storage service.
 ```
 
-To back up data to Google Cloud Storage, replace the S3-related options with the `--gs.credentials` option and modify the `--storage` option  in the `spec.template.spec.containers[0].command` section accordingly.
+<!-- To back up data to Google Cloud Storage, replace the S3-related options with the `--gs.credentials` option and modify the `--storage` option  in the `spec.template.spec.containers[0].command` section accordingly.
 
 Example:
 
@@ -108,7 +108,7 @@ Example:
             --meta nebula-metad-0.nebula-metad-headless.nebula.svc.cluster.local:9559   # The address of the Metad service. 
             --storage gs://BUCKET_NAME                          # The name of the GCS bucket where the backup data is stored.
             --gs.credentials '{"type":"service_account","project_id":"<project_id>","project_key":"<project_key>","private_key":"<private_key>","client_email":"<service_account_email>","client_id":"<client_id>","auth_uri":"https://accounts.google.com/o/oauth2/auth","token_uri":"https://oauth2.googleapis.com/token","auth_provider_x509_cert_url":"https://www.googleapis.com/oauth2/v1/certs","client_x509_cert_url":"https://www.googleapis.com/robot/v1/metadata/x509/<service_account_email>","universe_domain":"googleapis.com"}'# The JSON string that represents your service account key provided by Google Cloud.
-```
+``` -->
 
 ### Incremental backup
 
@@ -386,7 +386,7 @@ spec:
   |`spec.br.s3.secretName`|-|The name of the Secret that is used to access the S3 storage bucket.|
 
 
-### Restore from Google Cloud Storage
+<!-- ### Restore from Google Cloud Storage
 
 When restoring data from Google Cloud Storage, you need to create a Secret to store the credentials for accessing Google Cloud Storage. Then create a resource object (NebulaRestore) for restoring the data, which instructs NebulaGraph Operator to create a new NebulaGraph cluster based on the information defined in this resource object and restore the backup data to the newly created cluster.
 
@@ -436,7 +436,7 @@ spec:
   ｜`spec.config.concurrency`｜`5`｜The number of concurrent downloads when restoring data. The default value is `5`. ｜
   ｜`spec.config.gs.location`｜-｜The geographical region where the GCS bucket is located. ｜
   ｜`spec.config.gs.bucket`｜-｜The name of the GCS bucket where backup data is stored. ｜
-  ｜`spec.config.gs.secretName`｜-｜The name of the Secret that is used to access the GCS bucket. ｜
+  ｜`spec.config.gs.secretName`｜-｜The name of the Secret that is used to access the GCS bucket. ｜ -->
 
 
 
