--- a/docs-2.0-zh/20.appendix/0.FAQ.md
+++ b/docs-2.0-zh/20.appendix/0.FAQ.md
@@ -223,6 +223,18 @@ Got 1 rows (time spent 1235/1934 us)
 
 - 第二个数字`1934`表示从客户端角度看所花费的时间，即从客户端发送请求、接收结果，然后在屏幕上显示结果所花费的时间。
 
+### nebula-importer 导入数据输出的字段都是什么意思？
+
+```
+“msg”: “1m20s 1h2m3s 50.00%(32 GiB/64 GiB) Records{Finished: 123456789, Failed: 0, Rate: 12345.67/s}, Requests{Finished: 1234567, Failed: 0, Latency: 1.23456789s/1.32456789s, Rate: 12.34/s}, Processed{Finished: 23456789, Failed: 0, Rate: 345678.91/s}”
+```
+
+在使用 nebula-importer 导入数据时，会遇到上面的结果输出。以下是字段说明：
+
+* `Records` 对应的是 csv 的记录数（依次分别是）：完成的条数、失败的条数、每秒导入多少条数据；
+* `Requests` 对应的是请求数（依次分别是）：完成的请求数、失败的请求数、请求耗时：服务端 / 客户端，每秒处理的请求数；
+* `Processed` 对应的是处理的点边数（依次分别是）：完成的处理点边总数、失败的点边数量、每秒处理的点边数量；
+
 ### 为什么在正常连接 {{nebula.name}} 后，`nebula-storaged`进程的端口号一直显示红色？
 
 `nebula-storaged`进程的端口号的红色闪烁状态是因为`nebula-storaged`在启动流程中会等待`nebula-metad`添加当前 Storage 服务，当前 Storage 服务收到 Ready 信号后才会正式启动服务。从 3.0.0 版本开始，Meta 服务无法直接读写在配置文件中添加的 Storage 服务，配置文件的作用仅仅是将 Storage 服务注册至 Meta 服务中。用户必须使用`ADD HOSTS`命令后，才能使 Meta 服务正常读写 Storage 服务。更多信息，参见[管理 Storage 主机](../4.deployment-and-installation/manage-storage-host.md)。
