--- a/docs-2.0/k8s-operator/4.cluster-administration/4.7.security/4.7.1.enable-mtls.md
+++ b/docs-2.0/k8s-operator/4.cluster-administration/4.7.security/4.7.1.enable-mtls.md
@@ -465,7 +465,7 @@ The following only lists the fields that must be configured to enable mTLS with 
           clientCert: "tls.crt"  # The key name of the certificate in the client certificate Secret, default is "tls.crt".
           clientKey: "tls.key"   # The key name of the private key in the client certificate Secret, default is "tls.key".
           caSecret: "ca-cert" # The name of the CA certificate Secret.
-          caCert: "tls.crt"  # The key name of the certificate in the CA certificate Secret, default is "tls.crt".
+          caCert: "tls.crt"  # The key name of the certificate in the CA certificate Secret, default is "ca.crt".
       ```
 
       Ensure that the keys for the certificates and private keys in the created Secret match the values of the `clientCert`, `clientKey`, and `caCert` fields in `spec.sslCerts`. If you've created a Secret of the TLS type, the default key names are `tls.crt` and `tls.key` for the certificate and private key. In this case, you'll need to manually configure `caCert` field with `ca.crt`.
@@ -519,19 +519,6 @@ The following only lists the fields that must be configured to enable mTLS with 
           key_path: certs/server.key
           enable_meta_ssl: "true"
           enable_storage_ssl: "true"
-    ```
-
-    To enable mTLS between the client and the Graph service, add the following fields under the `spec.graphd.config` in the cluster configuration file. The paths specified in fields with `*_path` correspond to file paths relative to `/user/local/nebula`. **It's important to avoid using absolute paths to prevent path recognition errors.**
-
-    ```yaml
-    spec:
-      graph:
-        config:
-          ca_client_path: certs/root.crt
-          ca_path: certs/root.crt
-          cert_path: certs/server.crt
-          key_path: certs/server.key
-          enable_graph_ssl: "true"
     ```
 
     #### `initContainers`, `sidecarContainers`, `volumes`, and `volumeMounts`
