--- a/docs-2.0-zh/3.ngql-guide/7.general-query-statements/2.match.md
+++ b/docs-2.0-zh/3.ngql-guide/7.general-query-statements/2.match.md
@@ -204,6 +204,7 @@ nebula> MATCH (v) WHERE id(v) IN {"player100", "player101"} \
     在 nGQL 1.x 中，`--`符号用于行内注释，从 nGQL 2.x 起，`--`符号表示出边或入边，不再用于注释。
 
 ```ngql
+# 查找球员Tim Duncan关注的球员和关注Tim Duncan的球员的姓名
 nebula> MATCH (v:player{name:"Tim Duncan"})--(v2:player) \
         RETURN v2.player.name AS Name;
 +---------------------+
@@ -232,6 +233,7 @@ nebula> MATCH (v:player{name:"Tim Duncan"})-->(v2:player) \
 如果需要判断目标点，可以使用`CASE`表达式。
 
 ```ngql
+# 查找与Tim Duncan有关系的点，如果球队名称不为空，返回球队名；如果队员名不为空，返回队员名
 nebula> MATCH (v:player{name:"Tim Duncan"})--(v2) \
         RETURN \
         CASE WHEN v2.team.name IS NOT NULL \
