--- a/docs-2.0-zh/3.ngql-guide/7.general-query-statements/2.match.md
+++ b/docs-2.0-zh/3.ngql-guide/7.general-query-statements/2.match.md
@@ -84,7 +84,7 @@ nebula> MATCH (v:player) \
 ```ngql
 # 创建包含 name 属性和 age 属性的 Tag actor。
 nebula> CREATE TAG actor (name string, age int);
-# 插入 Tag actor 的属性到点 player100。
+# 插入 Tag actor 到点 player100。
 nebula> INSERT VERTEX actor(name, age) VALUES "player100":("Tim Duncan", 42);
 # 匹配 Tag 为 player 和 actor 的点。
 nebula> MATCH (v:player:actor) \
