--- a/docs-2.0-zh/3.ngql-guide/7.general-query-statements/2.match.md
+++ b/docs-2.0-zh/3.ngql-guide/7.general-query-statements/2.match.md
@@ -143,7 +143,7 @@ nebula> MATCH (v) \
 | ("player100" :player{age: 42, name: "Tim Duncan"}) |
 +----------------------------------------------------+
 
-# 匹配所有存在于指定列表中的 name 属性值的起始点，并返回起始点和终点的数据。
+# 匹配 name 属性值存在于 names 列表内的起点，并返回起点和终点的数据。
 nebula> WITH ['Tim Duncan', 'Yao Ming'] AS names \
         MATCH (v1:player)-->(v2:player) \
         WHERE v1.player.name in names \
