--- a/docs-2.0-zh/3.ngql-guide/7.general-query-statements/2.match.md
+++ b/docs-2.0-zh/3.ngql-guide/7.general-query-statements/2.match.md
@@ -275,7 +275,7 @@ nebula> MATCH (v:player{name:"Tim Duncan"})-->(v2)<--(v3) \
 如果不需要引用点，可以省略括号中表示点的变量。
 
 ```ngql
-# 查找 name 属性值为 Tim Duncan 的点 v 与点 v3 的指向路径，并返回 v3 的 name 属性值。
+# 查找 name 属性值为 Tim Duncan 的点 v， 点 v3 与 v 指向同一个点，返回 v3 的 name 属性值。
 nebula> MATCH (v:player{name:"Tim Duncan"})-->()<--(v3) \
         RETURN v3.player.name AS Name;
 +---------------------+
