--- a/docs-2.0-zh/3.ngql-guide/7.general-query-statements/2.match.md
+++ b/docs-2.0-zh/3.ngql-guide/7.general-query-statements/2.match.md
@@ -292,7 +292,7 @@ nebula> MATCH (v:player{name:"Tim Duncan"})-->()<--(v3) \
 连接起来的点和边构成了路径。用户可以使用自定义变量命名路径。
 
 ```ngql
-# 匹配 name 属性值为 Tim Duncan 的点 v 的所有路径。
+# 设置路径 p，其模式为 name 属性值为 Tim Duncan 的点 v 指向相邻的点 v2。返回所有符合条件的路径。
 nebula> MATCH p=(v:player{name:"Tim Duncan"})-->(v2) \
         RETURN p;
 +--------------------------------------------------------------------------------------------------------------------------------------+
