--- a/docs-2.0-zh/3.ngql-guide/7.general-query-statements/2.match.md
+++ b/docs-2.0-zh/3.ngql-guide/7.general-query-statements/2.match.md
@@ -311,7 +311,7 @@ nebula> MATCH p=(v:player{name:"Tim Duncan"})-->(v2) \
 ### 匹配边
 
 ```ngql
-# 匹配对应边并返回前 3 条数据。
+# 匹配对应边并返回 3 条数据。
 nebula> MATCH ()<-[e]-() \
         RETURN e \
         LIMIT 3;
