--- a/docs-2.0-zh/3.ngql-guide/7.general-query-statements/2.match.md
+++ b/docs-2.0-zh/3.ngql-guide/7.general-query-statements/2.match.md
@@ -204,7 +204,7 @@ nebula> MATCH (v) WHERE id(v) IN {"player100", "player101"} \
     在 nGQL 1.x 中，`--`符号用于行内注释，从 nGQL 2.x 起，`--`符号表示出边或入边，不再用于注释。
 
 ```ngql
-# 查找球员Tim Duncan关注的球员和关注Tim Duncan的球员的姓名
+# 查找球员 Tim Duncan 关注的球员和关注 Tim Duncan 的球员的姓名。
 nebula> MATCH (v:player{name:"Tim Duncan"})--(v2:player) \
         RETURN v2.player.name AS Name;
 +---------------------+
