--- a/docs-2.0-en/k8s-operator/4.cluster-administration/4.9.advanced/4.9.1.rolling-update-strategy.md
+++ b/docs-2.0-en/k8s-operator/4.cluster-administration/4.9.advanced/4.9.1.rolling-update-strategy.md
@@ -2,9 +2,9 @@
 
 NebulaGraph clusters use a distributed architecture to divide data into multiple logical partitions, which are typically evenly distributed across different nodes. In distributed systems, there are usually multiple replicas of the same data. To ensure the consistency of data across multiple replicas, NebulaGraph clusters use the Raft protocol to synchronize multiple partition replicas. In the Raft protocol, each partition elects a leader replica, which is responsible for handling write requests, while follower replicas handle read requests.
 
-When a NebulaGraph cluster created by NebulaGraph Operator performs a rolling update, a storage node temporarily stops providing services for the update. For an overview of rolling updates, see [Performing a Rolling Update](https://kubernetes.io/docs/tutorials/kubernetes-basics/update/update-intro/). If the node hosting the leader replica stops providing services, it will result in the unavailability of read and write operations for that partition. To avoid this situation, by default, Operator migrates the leader replicas to other unaffected nodes during the rolling update process of a NebulaGraph cluster. This way, when a storage node is being updated, the leader replicas on other nodes can continue processing client requests, ensuring the read and write availability of the cluster.
+When a NebulaGraph cluster created by NebulaGraph Operator performs a rolling update, a storage node temporarily stops providing services for the update. For an overview of rolling updates, see [Performing a Rolling Update](https://kubernetes.io/docs/tutorials/kubernetes-basics/update/update-intro/). If the node hosting the leader replica stops providing services, it will result in the unavailability of read and write operations for that partition. To avoid this situation, by default, NebulaGraph Operator transfers the leader replicas to other unaffected nodes during the rolling update process of a NebulaGraph cluster. This way, when a storage node is being updated, the leader replicas on other nodes can continue processing client requests, ensuring the read and write availability of the cluster.
 
-The process of migrating all leader replicas from one storage node to the other nodes may take a long time. To better control the rolling update duration, Operator provides a field called `enableForceUpdate`. When it is confirmed that there is no external access traffic, you can set this field to `true`. This way, the leader replicas will not be migrated to other nodes, thereby speeding up the rolling update process.
+The process of migrating all leader replicas from one storage node to the other nodes may take a long time. To better control the rolling update duration, Operator provides a field called `enableForceUpdate`. When it is confirmed that there is no external access traffic, you can set this field to `true`. This way, the leader replicas will not be transferred to other nodes, thereby speeding up the rolling update process.
 
 ## Rolling update trigger conditions
 
@@ -18,7 +18,7 @@ Operator triggers a rolling update of the NebulaGraph cluster under the followin
 
 In the YAML file for creating a cluster instance, add the `spec.storaged.enableForceUpdate` field and set it to `true` or `false` to control the rolling update speed.
 
-When `enableForceUpdate` is set to `true`, it means that the partition leader replicas will not be migrated, thus speeding up the rolling update process. Conversely, when set to `false`, it means that the leader replicas will be migrated to other nodes to ensure the read and write availability of the cluster. The default value is `false`.
+When `enableForceUpdate` is set to `true`, it means that the leader partition replicas are not transferred, thus speeding up the rolling update process. Conversely, when set to `false`, it means that the leader replicas are transferred to other nodes to ensure the read and write availability of the cluster. The default value is `false`.
 
 !!! warning
   
@@ -32,8 +32,8 @@ spec:
 ...
   storaged:
     # When set to true,
-    # it means that the partition leader replicas will not be migrated,
-    # but the cluster pods will be rebuilt directly.
+    # it means that the leader partition replicas are not transferred,
+    # but the cluster pods are rebuilt directly.
     enableForceUpdate: true 
     ...
 ```
