operator-chart-value changes

--- a/docs-2.0-en/k8s-operator/3.operator-management/3.1.customize-installation.md
+++ b/docs-2.0-en/k8s-operator/3.operator-management/3.1.customize-installation.md
@@ -29,6 +29,51 @@ controllerManager:
     requests:
       cpu: 100m
       memory: 100Mi
+  verbosity: 0
+  ## Additional InitContainers to initialize the pod
+  # Example:
+  #  extraInitContainers:
+  #  - name: init-auth-sidecar
+  #    command:
+  #    - /bin/sh
+  #    - -c
+  #    args:
+  #    - cp -R /certs/* /credentials/
+  #    imagePullPolicy: Always
+  #    image: reg.vesoft-inc.com/nebula-certs:latest
+  #    volumeMounts:
+  #    - name: credentials
+  #      mountPath: /credentials
+  extraInitContainers: []
+
+  # sidecarContainers - add more containers to controller-manager
+  # Key/Value where Key is the sidecar `- name: <Key>`
+  # Example:
+  #   sidecarContainers:
+  #      webserver:
+  #        image: nginx
+  # OR for adding netshoot to controller manager
+  #  sidecarContainers:
+  #    netshoot:
+  #      args:
+  #      - -c
+  #      - while true; do ping localhost; sleep 60;done
+  #      command:
+  #      - /bin/bash
+  #      image: nicolaka/netshoot
+  #      imagePullPolicy: Always
+  #      name: netshoot
+  #      resources: {}
+  sidecarContainers: {}
+
+  ## Additional controller-manager Volumes
+  extraVolumes: []
+
+  ## Additional controller-manager Volume mounts
+  extraVolumeMounts: []
+
+  securityContext: {}
+  #  runAsNonRoot: true
 
 admissionWebhook:
   create: false
@@ -50,7 +95,7 @@ scheduler:
   verbosity: 0
   plugins:
     enabled: ["NodeZone"]
-    disabled: [] 
+    disabled: [] # Only in-tree plugins need to be defined here
 ...
 ```
 
@@ -64,9 +109,16 @@ Part of the above parameters are described as follows:
 | `kubernetesClusterDomain`              | `cluster.local`                 | The cluster domain.                                |
 | `controllerManager.create`             | `true`                          | Whether to enable the controller-manager component.              |
 | `controllerManager.replicas`           | `2`                             | The number of controller-manager replicas.                |
+| `controllerManager.env`                | `[]`                            | The environment variables for the controller-manager component.                 |
+| `controllerManager.extraInitContainers`| `[]`                            | Runs an init container.   |
+| `controllerManager.sidecarContainers`  | `{}`                            | Runs a sidecar container.  |
+| `controllerManager.extraVolumes`       | `[]`                            | Sets a storage volume.  |
+| `controllerManager.extraVolumeMounts`  | `[]`                            | Sets the storage volume mount path.  |
+| `controllerManager.securityContext`    | `{}`                            | Configures the access and control settings for NebulaGraph Operator.  |
 | `admissionWebhook.create`              | `false`                          | Whether to enable Admission Webhook. This option is disabled. To enable it, set the value to `true` and you will need to install [cert-manager](https://cert-manager.io/docs/installation/helm/). For details, see [Enable admission control](../4.cluster-administration/4.7.security/4.7.2.enable-admission-control.md).             |
+| `admissionWebhook.webhookBindPort` | `9443` | The TCP port the Webhook server binds to. It is 9443 by default. |
 | `shceduler.create`                     | `true`                          | Whether to enable Scheduler.                       |
-| `shceduler.schedulerName`              | `nebula-scheduler`              | The name of the scheduler customized by NebulaGraph Operator. It is used to evenly distribute Storage Pods across different zones which are only available in the Enterprise Edition.|                            
+| `shceduler.schedulerName`              | `nebula-scheduler`              | The name of the scheduler customized by NebulaGraph Operator.                      |
 | `shceduler.replicas`                   | `2`                             | The number of nebula-scheduler replicas.                  |
 
 
