--- a/docs-2.0-zh/k8s-operator/3.operator-management/3.1.customize-installation.md
+++ b/docs-2.0-zh/k8s-operator/3.operator-management/3.1.customize-installation.md
@@ -31,10 +31,55 @@ controllerManager:
     requests:
       cpu: 100m
       memory: 100Mi
+  verbosity: 0
+  ## Additional InitContainers to initialize the pod
+  # Example:
+  #  extraInitContainers:
+  #  - name: init-auth-sidecar
+  #    command:
+  #    - /bin/sh
+  #    - -c
+  #    args:
+  #    - cp -R /certs/* /credentials/
+  #    imagePullPolicy: Always
+  #    image: reg.vesoft-inc.com/nebula-certs:latest
+  #    volumeMounts:
+  #    - name: credentials
+  #      mountPath: /credentials
+  extraInitContainers: []
+
+  # sidecarContainers - add more containers to controller-manager
+  # Key/Value where Key is the sidecar `- name: <Key>`
+  # Example:
+  #   sidecarContainers:
+  #      webserver:
+  #        image: nginx
+  # OR for adding netshoot to controller manager
+  #  sidecarContainers:
+  #    netshoot:
+  #      args:
+  #      - -c
+  #      - while true; do ping localhost; sleep 60;done
+  #      command:
+  #      - /bin/bash
+  #      image: nicolaka/netshoot
+  #      imagePullPolicy: Always
+  #      name: netshoot
+  #      resources: {}
+  sidecarContainers: {}
+
+  ## Additional controller-manager Volumes
+  extraVolumes: []
+
+  ## Additional controller-manager Volume mounts
+  extraVolumeMounts: []
+
+  securityContext: {}
+  #  runAsNonRoot: true
 
 admissionWebhook:
   create: false
-  # Webhook 服务器监听和接受传入请求的端口，默认 9443。
+  # The TCP port the Webhook server binds to. (default 9443)
   webhookBindPort: 9443
 
 scheduler:
@@ -52,7 +97,7 @@ scheduler:
   verbosity: 0
   plugins:
     enabled: ["NodeZone"]
-    disabled: [] 
+    disabled: [] # only in-tree plugins need to be defined here
 ...
 ```
 
@@ -66,9 +111,16 @@ scheduler:
 | `kubernetesClusterDomain`              | `cluster.local`           | 集群域名。                                |
 | `controllerManager.create`             | `true`                          | 是否启用 controller-manager。              |
 | `controllerManager.replicas`           | `2`                             | controller-manager 副本数。                 |
+| `controllerManager.env`                | `[]`                            | 配置环境变量。                            |
+| `controllerManager.extraInitContainers`| `[]`                            | 配置初始化容器。  |
+| `controllerManager.sidecarContainers`  | `{}`                            | 配置 sidecar 容器。  |
+| `controllerManager.extraVolumes`       | `[]`                            | 配置存储卷。  |
+| `controllerManager.extraVolumeMounts`  | `[]`                            | 配置存储卷挂载路径。  |
+| `controllerManager.securityContext`    | `{}`                            | 配置访问和控制 NebulaGraph Operator 的操作。  |
 | `admissionWebhook.create`              | `false`                          | 是否启用 Admission Webhook。默认关闭，如需开启，需设置为`true`并且需要安装 [cert-manager](https://cert-manager.io/docs/installation/helm/)。详情参见[开启准入控制](../4.cluster-administration/4.7.security/4.7.2.enable-admission-control.md)。 |
+| `admissionWebhook.webhookBindPort`     | `9443`                          | Webhook 服务器监听和接受传入请求的端口，默认 9443。  |
 | `scheduler.create`                     | `true`                          | 是否启用 Scheduler。                       |
-| `scheduler.schedulerName`              | `nebula-scheduler`              | NebulaGraph Operator 自定义的调度器名称。用于开启 Zone 时，均匀调度 Storage Pods 到不同的 Zone 中。仅适用于企业版集群。|              
+| `scheduler.schedulerName`              | `nebula-scheduler`              | NebulaGraph Operator 自定义的调度器名称。|              
 | `scheduler.replicas`                   | `2`                             | nebula-scheduler 副本数。                  |
 
 ## 示例
