--- a/docs-2.0-en/k8s-operator/4.cluster-administration/4.7.security/4.7.2.enable-admission-control.md
+++ b/docs-2.0-en/k8s-operator/4.cluster-administration/4.7.security/4.7.2.enable-admission-control.md
@@ -10,9 +10,19 @@ A NebulaGraph cluster is created with NebulaGrpah Operator. For detailed steps, 
 
 ## Admission control rules
 
-Kubernetes admission control allows you to insert custom logic or policies before Kubernetes API Server processes requests. This mechanism can be used to implement various security policies, such as restricting a Pod's resource consumption or limiting its access permissions. NebulaGraph Operator supports validation operations, which means it validates and intercepts requests without making changes. NebulaGraph Operator's default admission validation control rules include:
+Kubernetes admission control allows you to insert custom logic or policies before Kubernetes API Server processes requests. This mechanism can be used to implement various security policies, such as restricting a Pod's resource consumption or limiting its access permissions. NebulaGraph Operator supports validation operations, which means it validates and intercepts requests without making changes. 
 
-- Ensuring the minimum number of replicas in high availability mode:
+After admission control is enabled, NebulaGraph Operator implements the following admission validation control rules by default. You cannot disable these rules:
+
+- Forbid adding additional PVs to Storage service via `dataVolumeClaims`.
+
+- Forbid shrinking the capacity of all service's PVCs, but allow expansion.
+
+- Forbid any secondary operation during Storage service scale-in/scale-out.
+
+After admission control is enabled, NebulaGraph Operator allows you to add annotations to implement the following admission validation control rules:
+
+- Clusters with the `ha-mode` annotation must have the minimum number of replicas as required by high availability mode:
   
   - For Graph service: At least 2 replicas are required.
   - For Meta service: At least 3 replicas are required.
@@ -22,12 +32,7 @@ Kubernetes admission control allows you to insert custom logic or policies befor
 
         High availability mode refers to the high availability of NebulaGraph cluster services. Storage and Meta services are stateful, and the number of replicas should be an odd number due to [Raft](../../../1.introduction/3.nebula-graph-architecture/4.storage-service.md#raft) protocol requirements for data consistency. In high availability mode, at least 3 Storage services and 3 Meta services are required. Graph services are stateless, so their number of replicas can be even but should be at least 2.
 
-
-- Preventing additional PVs from being added to Storage service via `dataVolumeClaims`.
-
-- Disallowing shrinking the capacity of all service's PVCs, but allowing expansion.
-
-- Forbidding any secondary operation during Storage service scale-in/scale-out.
+- Clusters with the `delete-protection` annotation cannot be deleted. For more information, see [Configure deletion protection](4.7.3.config-deletion-protection.md).        
 
 ## TLS certificates for admission webhooks
 
@@ -71,16 +76,6 @@ Once cert-manager is installed and admission control is enabled, NebulaGraph Ope
 
 4. Verify the control rules.
 
-  - Verify the minimum number of replicas in high availability mode.
-
-    ```bash
-    # Annotate the cluster to enable high availability mode.
-    $ kubectl annotate nc nebula nebula-graph.io/ha-mode=true
-    # Verify the minimum number of the Graph service's replicas.
-    $ kubectl patch nc nebula --type='merge' --patch '{"spec": {"graphd": {"replicas":1}}}'
-    Error from server: admission webhook "nebulaclustervalidating.nebula-graph.io" denied the request: spec.graphd.replicas: Invalid value: 1: should be at least 2 in HA mode
-    ```
-
   - Verify preventing additional PVs from being added to Storage service.
 
     ```bash
@@ -103,3 +98,15 @@ Once cert-manager is installed and admission control is enabled, NebulaGraph Ope
     $ kubectl patch nc nebula --type='merge' --patch '{"spec": {"storaged": {"replicas": 3}}}'
     Error from server: admission webhook "nebulaclustervalidating.nebula-graph.io" denied the request: [spec.storaged: Forbidden: field is immutable while in ScaleOut phase, spec.storaged.replicas: Invalid value: 3: field is immutable while not in Running phase]
     ```
+
+  - Verify the minimum number of replicas in high availability mode.
+
+    ```bash
+    # Annotate the cluster to enable high availability mode.
+    $ kubectl annotate nc nebula nebula-graph.io/ha-mode=true
+    # Verify the minimum number of the Graph service's replicas.
+    $ kubectl patch nc nebula --type='merge' --patch '{"spec": {"graphd": {"replicas":1}}}'
+    Error from server: admission webhook "nebulaclustervalidating.nebula-graph.io" denied the request: spec.graphd.replicas: Invalid value: 1: should be at least 2 in HA mode
+    ```
+
+  - Verify deletion protection. For more information, see [Configure deletion protection](4.7.3.config-deletion-protection.md).
