--- a/docs-2.0-zh/k8s-operator/4.cluster-administration/4.1.installation/4.1.3.cluster-uninstall.md
+++ b/docs-2.0-zh/k8s-operator/4.cluster-administration/4.1.installation/4.1.3.cluster-uninstall.md
@@ -4,7 +4,8 @@
 
 ## 使用限制
 
-只支持删除使用 NebulaGraph Operator 创建的 {{nebula.name}} 集群。
+- 只支持删除使用 NebulaGraph Operator 创建的{{nebula.name}}集群。
+- 无法删除启用了删除保护的集群。更多信息，请参见[配置删除保护](../4.7.security/4.7.3.config-deletion-protection.md)。
 
 ## 使用`kubectl`删除 {{nebula.name}} 集群
 
