--- a/docs-2.0-en/k8s-operator/4.cluster-administration/4.7.security/4.7.3.config-deletion-protection.md
+++ b/docs-2.0-en/k8s-operator/4.cluster-administration/4.7.security/4.7.3.config-deletion-protection.md
@@ -22,7 +22,7 @@ The preceding command enables deletion protection for the `nebula` cluster in th
 To verify that deletion protection is enabled, run the following command:
 
 ```bash
-kubectl delete sc nebula -n nebula-test
+kubectl delete nc nebula -n nebula-test
 ```
 
 The preceding command attempts to delete the `nebula` cluster in the `nebula-test` namespace.
