--- a/docs-2.0-zh/k8s-operator/4.cluster-administration/4.7.security/4.7.3.config-deletion-protection.md
+++ b/docs-2.0-zh/k8s-operator/4.cluster-administration/4.7.security/4.7.3.config-deletion-protection.md
@@ -25,7 +25,7 @@ To verify that deletion protection is enabled, run the following command:
 运行以下命令验证删除保护是否已启用：  
 
 ```bash
-kubectl delete sc nebula -n nebula-test
+kubectl delete nc nebula -n nebula-test
 ```
 
 以上命令尝试删除`nebula-test`命名空间中的`nebula`集群。
