--- a/docs-2.0-zh/k8s-operator/4.cluster-administration/4.9.advanced/4.9.2.restart-cluster.md
+++ b/docs-2.0-zh/k8s-operator/4.cluster-administration/4.9.advanced/4.9.2.restart-cluster.md
@@ -191,5 +191,5 @@
 
 由上述输出可知，`nebula-storaged-1` Storage 服务 Pod 已经重启。
 
-
+在重启单个 Storage 服务 Pod 后，数据 Leader 的分布可能不均衡。可以执行[`BALANCE LEADER`](../../../3.ngql-guide/4.job-statements.md#submit_job_balance_leader)命令重新均衡数据 Leader 的分布。关于如何查看 Leader 分布情况，请参见[`SHOW HOSTS`](../../../3.ngql-guide/7.general-query-statements/6.show/6.show-hosts.md)。
 
