--- a/docs-2.0/k8s-operator/1.introduction-to-nebula-operator.md
+++ b/docs-2.0/k8s-operator/1.introduction-to-nebula-operator.md
@@ -38,7 +38,7 @@ NebulaGraph Operator does not support the v1.x version of NebulaGraph. NebulaGra
 
 | NebulaGraph   | NebulaGraph Operator |
 | ------------- | -------------------- |
-| 3.5.x ~ 3.7.0 | 1.5.0 ~ 1.7.x        |
+| 3.5.x ~ 3.7.x | 1.5.0 ~ 1.8.x        |
 | 3.0.0 ~ 3.4.1 | 1.3.0, 1.4.0 ~ 1.4.2 |
 | 3.0.0 ~ 3.3.x | 1.0.0, 1.1.0, 1.2.0  |
 | 2.5.x ~ 2.6.x | 0.9.0                |
@@ -51,4 +51,7 @@ NebulaGraph Operator does not support the v1.x version of NebulaGraph. NebulaGra
 
 ## Release note
 
-[Release](https://github.com/vesoft-inc/nebula-operator/releases/tag/{{operator.tag}})
+[NebulaGraph Operator release notes](../20.appendix/release-notes/operator-release-note.md)
+
+[History releases](https://github.com/vesoft-inc/nebula-operator/releases/tag/{{operator.tag}})
+
