--- a/docs-2.0/k8s-operator/3.operator-management/3.3.upgrade-operator.md
+++ b/docs-2.0/k8s-operator/3.operator-management/3.3.upgrade-operator.md
@@ -39,7 +39,7 @@
   nebula-operator/nebula-operator	{{operator.release}}        	{{operator.release}}      	Nebula Operator Helm chart for Kubernetes
   ```
 
-4. Upgrade NebulaGraph Operator to {{operator.release}}.
+4. Upgrade NebulaGraph Operator to version {{operator.release}}.
 
   ```bash
   helm upgrade nebula-operator nebula-operator/nebula-operator --namespace=<namespace_name> --version={{operator.release}}
@@ -53,7 +53,7 @@
 
   Output:
 
-  ```bash
+  ```yaml
   Release "nebula-operator" has been upgraded. Happy Helming!
   NAME: nebula-operator
   LAST DEPLOYED: Tue Apr 16 02:21:08 2022
