--- a/docs-2.0/k8s-operator/4.cluster-administration/4.8.ha-and-balancing/4.8.2.enable-zone.md
+++ b/docs-2.0/k8s-operator/4.cluster-administration/4.8.ha-and-balancing/4.8.2.enable-zone.md
@@ -112,7 +112,7 @@ metadata:
 spec:
   # Alpine Linux image used to obtain zone information for node location.
   alpineImage: "reg.example-inc.com/xxx/xxx:latest"
-  # Agent configuration for backup, restore, and log cleanup.
+  # Agent configuration for backup and restore.
   # If you don't customize this configuration, the default configuration is used.
   agent:
     image: reg.example-inc.com/xxx/xxx
@@ -154,8 +154,7 @@ spec:
       # Once set, the zone name cannot be changed.
       # It is recommended to set an odd number of zones.
       zone_list: az1,az2,az3 
-      # Whether to enable the timestamp validation of the session.
-      validate_session_timestamp: "true"
+      validate_session_timestamp: "false"
     # LM access address and port number.
     licenseManagerURL: "192.168.8.xxx:9119"
     resources:
