--- a/docs-2.0/k8s-operator/4.cluster-administration/4.1.installation/4.1.2.cluster-upgrade.md
+++ b/docs-2.0/k8s-operator/4.cluster-administration/4.1.installation/4.1.2.cluster-upgrade.md
@@ -12,7 +12,7 @@ This topic introduces how to upgrade a NebulaGraph cluster created with NebulaGr
 
 - Only support upgrading the NebulaGraph version from {{operator.upgrade_from}} to {{operator.upgrade_to}}.
   
-- For upgrading NebulaGraph Enterprise Edition clusters, [contact us](https://www.nebula-graph.io/contact).
+- For upgrading NebulaGraph Enterprise Edition clusters, [contact us](mailto:inquiry@vesoft.com).
 
 
 ## Prerequisites
