--- a/docs-2.0/k8s-operator/4.cluster-administration/4.1.installation/4.1.3.cluster-uninstall.md
+++ b/docs-2.0/k8s-operator/4.cluster-administration/4.1.installation/4.1.3.cluster-uninstall.md
@@ -4,7 +4,8 @@ This topic explains how to delete a NebulaGraph cluster created using NebulaGrap
 
 ## Usage limitations
 
-Deletion is only supported for NebulaGraph clusters created with the NebulaGraph Operator.
+- Deletion is only supported for NebulaGraph clusters created with the NebulaGraph Operator.
+- You cannot delete a NebulaGraph cluster that has deletion protection enabled. For more information, see [Configure deletion protection](../4.7.security/4.7.3.config-deletion-protection.md).
 
 ## Delete a NebulaGraph cluster using `kubectl`
 
